@@ -17,6 +17,7 @@ Permitir hotswap desde Spectrum 128 a Spectrum +3
 Mejorar aviso de Azimuth en ventana External Audio Source
 Agregado modo Flash Color
 Permitir no guardar snapshot al salir de ZEsarUX
+Permitir cargar un archivo de configuración adicional .zesaruxdevrc
 Permitir definir Alt Izq, Ctrl Izq, Shift Izq o TAB como acción de Fuego de Joystick
 Permitir cambiar posicion de lectura actual en Visor de Cinta de Entrada para archivos .tap
 Permitir cargar rom de 8kb en ZX80 (por ejemplo la rom del ZX81, como un ZX80 actualizado a ZX81)
